02-modules/01-kubernetes/Master/setup/11-longhorn/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
      - longhorn.domainname.com
      secretName: certificate-secret
  rules:
  - host: longhorn.domainname.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
